// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textfield textfield: 0 1`] = `
<input
  className="textfield"
  type="text"
/>
`;

exports[`textfield textfield: 1 1`] = `
<input
  className="textfield"
  type="email"
/>
`;

exports[`textfield textfield: 2 1`] = `
<input
  className="textfield"
  type="number"
/>
`;

exports[`textfield textfield: 3 1`] = `
<input
  className="textfield"
  type="tel"
/>
`;
